--- a/src/sass/_crn-left_navbar.scss
+++ b/src/sass/_crn-left_navbar.scss
@@ -16,7 +16,7 @@
 	}
 	.left-nav-slider{
 		z-index: 1200;
-		background-color: #f1f1f1;
+		background-color: #eee;
 		border-right:1px solid #bbb;
 		display: block;
 		z-index: 1100;
