--- a/src/sass/_crn-variables.scss
+++ b/src/sass/_crn-variables.scss
@@ -16,8 +16,8 @@ $sky:#007c92;
 $turquoise:#009b76;
 $night:#012a30; //body copy
 
-$primary: $stanfordRed;
-$primaryHover: lighten($primary,15%);
+$primary: $ocean;
+$primaryHover: lighten($ocean,15%);
 
 //BS overrides
 $brand-primary:         $primary;
