--- a/src/sass/_crn-dashboard.scss
+++ b/src/sass/_crn-dashboard.scss
@@ -2,7 +2,6 @@
 .dashboard,
 .public-dashboard{
 	.nav.nav-pills>li{
-		margin-right: 10px;
 		a{
 			transition: background 0.3s ease;
 		  	padding: 10px 20px;
@@ -51,11 +50,12 @@
 		top:0px;
 	}
 	.dash-tab-content{
-		box-shadow: 1px 0px 3px 0px rgba(0, 0, 0, 0.3);
+		box-shadow:0px 0px 2px -1px rgba(0,0,0,1);
 		padding: 0;
 		margin: 0 0 20px 0;
 		position:relative;
 		z-index: 600;
+		background: #fff;
 		.header-wrap{
 			border-bottom: 1px solid #E1E1E1;
 		}
