--- a/src/sass/_crn-left_navbar.scss
+++ b/src/sass/_crn-left_navbar.scss
@@ -13,11 +13,12 @@
 		text-align: center;
 		margin: 5px 0;
 		cursor:pointer;
+		color: #fff;
 	}
 	.left-nav-slider{
 		z-index: 1200;
-		background-color: #eee;
-		border-right:1px solid #bbb;
+		background-color: #555;
+		border-right:1px solid #555;
 		display: block;
 		z-index: 1100;
 		position: relative;
@@ -35,11 +36,11 @@
 				padding: 0px 7px 2px;
 				font-size: 38px;
 				background-color: transparent;
-				color:#3b3b3b;
+				color:$misty;
 				width: 100%;
 				display: block;
 				text-decoration: none;
-				border-bottom:1px solid #bbb;
+				border-bottom:1px solid #999;
 				transition: background 0.4s ease;
 				i{
 					border-right: 1px solid #bbb;
@@ -61,14 +62,15 @@
 				}
 				&:hover{
 					text-decoration: none;
-					background:rgba(0,0,0,0.05);
+					background:rgba(255,255,255, 0.07);
+					color: $white;
 				}
 				&.active{
-					background-color: $ocean;
-					@include gradient-vertical($start-color: $ocean, $end-color:lighten($ocean, 5%), $start-percent: 40%, $end-percent: 100%);
+					background-color: $stanfordRed;
+					//@include gradient-vertical($start-color: $ocean, $end-color:lighten($ocean, 5%), $start-percent: 40%, $end-percent: 100%);
 					box-shadow:inset 0 0 5px rgba(0,0,0,0.5);
 
-					color:$misty;
+					color:$white;
 					i{
 						border-right:1px solid darken(#00505c, 5%);
 					}
@@ -79,7 +81,7 @@
 	}
 	.open{
 		.left-nav-slider{
-			box-shadow: 6px 0 5px -5px rgba(0, 0, 0, 0.3);
+			box-shadow: 1px 1px 3px -1px rgba(0, 0, 0, 1);
 			border:none;
 			width: 300px;
 		}
