--- a/src/sass/_crn-generalwrappers.scss
+++ b/src/sass/_crn-generalwrappers.scss
@@ -40,6 +40,9 @@ body,
 
 .page{
 	background: #e5e5e5;
+	position: fixed;
+    width: 100%;
+    overflow-y: scroll;
 	&.dataset{
 		background:#fff;
 	}
@@ -80,74 +83,72 @@ body,
 		padding-bottom: 100px;	
 	}
 }
-.tasks-col{
-	padding:0;
-}
 
-.toggle-sidebar-wrap{
-	position: absolute;
-    right: 0;
-    top: 75px;
-    z-index: 1299;
-    .btn{
-		border-radius: 0;
-		font-size: 25px;
-		color: $primary;
-		padding: 0 5px 3px;
-		background: #ddd;
-		font-family: $font-family-ssp;
-		line-height: 28px;
-		font-weight: 100;
-		&:hover{
-			color:#333;
-		}
-		&:focus,
-		&:active,
-		&:hover{
-			background: #ddd;
-			outline: none;
-			box-shadow:none;
+// .toggle-sidebar-wrap{
+// 	position: absolute;
+//     right: 0;
+//     top: 75px;
+//     z-index: 1299;
+//     .btn{
+// 		border-radius: 0;
+// 		font-size: 25px;
+// 		color: $primary;
+// 		padding: 0 5px 3px;
+// 		background: #ddd;
+// 		font-family: $font-family-ssp;
+// 		line-height: 28px;
+// 		font-weight: 100;
+// 		&:hover{
+// 			color:#333;
+// 		}
+// 		&:focus,
+// 		&:active,
+// 		&:hover{
+// 			background: #ddd;
+// 			outline: none;
+// 			box-shadow:none;
 
-		}
-    }
-    &.open{
-    	right: 33.33333%;
-    	margin-right: 0;
-    }
+// 		}
+//     }
+//     &.open{
+//     	right: 33.33333%;
+//     	margin-right: 0;
+//     }
 
-}
-.admin-tools-wrap{
-	margin: 0;
+// }
+// .admin-tools-wrap{
+// 	margin: 0;
 	
-	padding: 10px 15px;
-	.tools{
-		padding: 0;
-		margin: 0;
-		display:block;
-		width: 100%;
-		.tool {
-			text-align: center;
-			vertical-align:middle;
-			overflow:hidden;
-			> button,
-			.fadeIn > button{
-				width: 100%;
-			}
-			button{
-					padding:7px 10px;
-					transition: all 0.1s ease;
-					border-radius:0;
+// 	padding: 10px 15px;
+// 	.tools{
+// 		padding: 0;
+// 		margin: 0;
+// 		display:block;
+// 		width: 100%;
+// 		.tool {
+// 			text-align: center;
+// 			vertical-align:middle;
+// 			overflow:hidden;
+// 			> button,
+// 			.fadeIn > button{
+// 				width: 100%;
+// 			}
+// 			button{
+// 					padding:7px 10px;
+// 					transition: all 0.1s ease;
+// 					border-radius:0;
 			
-				}
-			}
-	}
-}
+// 				}
+// 			}
+// 	}
+// }
 
-.admin-tools-wrap.admin-tools-bar{
+.admin-tools-bar{
 	.tool {
 		display: block;
 		float: left;
 		width:50%;
+		overflow: hidden;
 	}
 }
 
@@ -158,4 +159,313 @@ body,
 .tooltip-inner{
 	max-width:200px;
 	font-size:12px;
+}
+
+
+
+	
+
+
+.tabs.nav.nav-pills>li{
+	a{
+		transition: background 0.3s ease;
+	  	padding: 10px 20px;
+	  	font-size: 14px;
+	  	text-transform:uppercase;
+	  	border-radius: 0;
+	  	.unread-badge{
+			background: #77E6A3;
+			position: absolute;
+			top: -10px;
+			right: -6px;
+			padding: 4px 0 0;
+			border-radius: 10px;
+			font-size: 9px;
+			line-height: 9px;
+			text-align: center;
+			width: 17px;
+			height: 17px;
+			color:$ocean;
+			font-weight: 600;
+	  	}
+	}
+	&.navbar-right{
+		a{
+			color:$night;
+			padding:5px;
+			background:none;
+			font-size: 12px;
+			text-transform: uppercase;
+			&:hover{
+				background:none;
+				color:$primary;
+
+			}
+		}
+		.dropdown-menu{
+			border-radius: 0;
+			border: none;
+			box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+		}
+	}
+}
+
+
+.panel-teasers-list{
+	box-shadow:0px 0px 2px -1px rgba(0,0,0,1);
+	padding: 0;
+	margin: 0 0 20px 0;
+	position:relative;
+	z-index: 600;
+	background: #fff;
+	.header-wrap{
+		border-bottom: 1px solid #E1E1E1;
+	}
+	h2{
+		margin: 0;
+		padding:20px;
+		font-size: 30px;
+		text-transform: uppercase;
+		font-weight: 100;
+	}
+
+	.filters-sort-wrap{
+		width: 100%;
+		float: none;
+		padding: 0;
+		background:#f9f9f9;
+		border-bottom:1px solid #ddd;
+		.filters{
+			width: 50%;
+			float: left;
+			text-align: right;
+			padding: 0;
+			margin: 0;
+			position: relative;
+			label{
+				margin: 0;
+				text-transform: uppercase;
+				font-size: 10px;
+				font-weight: 600;
+				color: #777;
+				text-align: right;
+				padding: 0 10px 0 0;
+				
+			}
+			button{
+				@extend .btn-filter;
+				&.filter-all{
+					//text-transform: uppercase;
+					font-size: 12px;
+					font-weight: 600;
+				}
+				&:hover,
+				&:focus{
+					outline: 0;
+				}
+				&:active,
+				&.active,
+				&:hover{
+					background:#eee;
+					color:$primary;
+					&.filter-shared{
+						color: $brand-info;
+					}
+					&.filter-public{
+						color: $brand-success;
+					}
+					&.filter-incomplete{
+						color: $brand-warning;
+					}
+				}
+				.filter-text{
+					visibility: hidden;
+					width: 1px;
+					position:absolute;
+					left: -99999em;
+				}
+			}
+		}
+	
+		.sort{
+			width: 50%;
+			float: left;
+		    padding: 0;
+		    margin: 0;
+		    position: relative;
+			label{
+				margin: 0;
+				text-transform: uppercase;
+				font-size: 10px;
+				font-weight: 600;
+				color: #777;
+				text-align: right;
+				padding: 0 10px 0 20px;				
+			}
+			a{
+				@extend .btn-sort;
+				&.name,
+				&.date{
+				    border: 1px solid #C2C2C2;
+				    border-width: 0 1px;
+				    text-align: center;
+				    display: inline-block;
+				}
+				&.date{
+					border-width:0 1px 0 0;
+				}
+
+				.fa{
+					position: relative;
+					line-height: 0;
+					top: 2px;
+					padding: 0;
+					font-size: 10px;
+					&.fa-sort-desc{
+						top:-2px;
+					}
+				}
+			}
+		}
+	}
+	.panel-group .panel+.panel{
+		margin: 0;
+	}
+	p.no-datasets{
+		padding:20px;
+	}
+	.panel{
+		border-radius: 0;
+		border: none;
+		border-bottom:1px solid #e1e1e1;
+		box-shadow: none;
+		background:#f8f8f8;
+		.panel-heading{
+			padding: 0;
+			background:#fff;
+			a{
+				display: block;
+				padding: 10px 20px;
+				transition: background 1s ease;
+				color:$primary;
+				width: 60%;
+				float: left;
+				h4{
+					border: none;
+					margin: 0 0 5px;
+					font-size: 15px;
+					padding: 0;
+					line-height: 13px;
+					
+				}
+				p{
+					padding:0;
+					margin:0;
+					color: #aaa;
+				}
+				&:after {
+					clear: both;
+				}
+				&:before, 
+				&:after {
+					content: " ";
+					display: table;
+				}
+
+				&:hover{
+					color:$primaryHover;
+				}
+
+			}
+				.status-container{
+					width: 40%;
+					float: left;
+					box-sizing: border-box;
+					padding:10px 20px;
+					span.status-wrap{
+						list-style: none;
+						padding: 0;
+						margin: 0;
+						span.status{
+							display: inline-block;
+							float: right;
+							margin-right: 0;
+							margin-left: 15px;
+							width: auto;
+							text-align: right;
+							box-sizing: border-box;
+						}
+					}
+				}
+				.meta-container{
+					.date{
+						float: none;
+						margin: 0;
+						color: #909090;
+						font-size: 10px;
+						padding:0;
+						line-height: 15px;
+						text-align: left;
+						text-transform: uppercase;
+						.name{
+							color:#333;
+							text-transform: none;
+							font-size: 12px;
+						}
+						.time-ago{
+							color:#333;
+						}
+					}
+				}
+		}
+		.panel-collapse {
+			.panel-body{
+				border:none;
+				background:transparent;
+				padding: 0 ;
+				
+				.inner{
+					min-height: 50px;
+					padding:10px 20px;
+					border-top: 1px solid #ddd;
+				}
+				.inner-right{
+					height: 50px;
+					border-top:1px solid #ddd;
+					margin:0;
+					padding:0;
+					
+					.left{
+						padding-left:0;
+						a{
+							padding: 16px 20px;
+							display: block;
+						}
+					}
+					.right {
+						padding-right:0;
+						text-align: right;
+						&.delete-data{
+							vertical-align: middle;
+							display: block;
+							text-align: right;
+							font-size: 13px;
+							text-transform: uppercase;
+							overflow:hidden;
+							
+						}
+						.btn-admin.warning{
+							    padding: 16px 20px ;
+						}
+						.btn-admin.delete{
+						    height: 50px;
+						}
+						.btn-admin.cancel{
+							    height: 50px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
