adjusting bugs related to: 260 & 252 upload button in nav 254 signin button in nav 257 & 256 & 252 blacklist buttons and tools 253- folder icon in upload modal 262 addfile button in filetree 252 upload modal styling 247 tooltip and tool fontsize dataset page

--- a/src/sass/_crn-admin.scss
+++ b/src/sass/_crn-admin.scss
@@ -18,7 +18,7 @@
 		h2{
 		    float: left;
 		}
-		button.btn-blue{
+		.panel-teasers-list button.btn-blue{
 		    float: right;
 		    width: 100px;
 		    padding: 10px;
