--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -177,8 +177,9 @@
 				label.add-name{
 				    float: left;
 				    width: 10%;
+				    height: 45px;
 				    text-align: right;
-				    padding: 10px 8px 11px;
+				    padding: 10px 8px;
 				    background-color: #FFF;
 				    margin: 0px 0px;
 				    box-shadow: inset 2px 0px 5px -1px rgba(0,0,0,.14);
