--- a/src/sass/_crn-navbar.scss
+++ b/src/sass/_crn-navbar.scss
@@ -37,19 +37,66 @@
 	}
 }
 
+.signInNavBtn{
+	margin: 15px 20px;
+}
 
-.upload-modal-wrap{
-	    float: left;
-    margin: 17px 55px 17px 10px;
+.upload-btn-wrap{
+	float: left;
+	width:220px;
+	margin: 0 30px;
+	.progress{
+		margin-top: 5px;
+		height: 10px;
+	}
+	.btn-blue{
+		margin:15px 0;
+		&.btn-view-progress{
+			margin:9px 0px 0;
+		}
+	}
+	.alert{
+	    position: absolute;
+	    right: 15px;
+	    max-width: 600px;
+	    top: 80px;
+	    font-size: 14px;
+	    background: rgba(0, 0, 0, 0.8);
+	    border: none;
+	    padding: 10px 40px 10px 20px;
+	    color: #D9D9D9;
+	    .alert-left{
+	    	a{
+	    		color: $brand-info; 
+	    		&:hover{
+	    			color:lighten($brand-info, 10%);
+	    		}
+	    	}
+	    }
+		.dismiss-button-x{
+		    position: absolute;
+		    top: 0;
+		    right: 0;
+		    background: none;
+		    border: none;
+		    color: $brand-info; 
+	    		&:hover{
+	    			color:lighten($brand-info, 10%);
+	    		}
+		}
+		&.alert-danger{
+			color:$brand-danger;
+		}
+	}
 }
 
 .navbar-right.useradmin-nav{
     margin: 0;
 
-    .username{
+    .user-wrap{
 		margin: 15px 75px 0 0;
 		text-align: right;
-		    float: left;
+		float: left;
     text-align: right;
 		display: block;
 		.greeting{
