--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -616,13 +616,16 @@
 .dataset-tools-wrap{
 	margin: -20px 0 20px;
     padding: 0;
+    position: fixed;
+    z-index: 1000;
 	
 	.tools{
 		padding: 0;
 		margin: 0;
 		display:block;
 		width: 100%;
-		background: #eee;
+		background: rgba(217, 217, 217, 0.82);
+		border-bottom: 1px solid #ddd;
 
 		.tool {	
 			text-align: center;
@@ -656,6 +659,10 @@
 				}
 			}
 	}
+}
+
+.dataset-wrap{
+	padding-top:50px;
 }
 
 @keyframes shrink-bounce{
