small change for error accordion header color

--- a/src/sass/_crn-dataset.scss
+++ b/src/sass/_crn-dataset.scss
@@ -638,6 +638,9 @@
 				width: 100%;
 			}
 			.btn-group{
+				-moz-backface-visibility: initial;
+				-ms-backface-visibility: initial;
+				-o-backface-visibility: initial;
 				backface-visibility: initial;
 			}
 			.btn-admin{
