--- a/src/sass/_crn-upload.scss
+++ b/src/sass/_crn-upload.scss
@@ -320,7 +320,7 @@
 										padding: 10px;
 										display: block;
 										background:lighten($salmon, 25%);
-										color:$primaryHover;
+										color:$brand-danger;
 										text-align: center;
 										text-transform: uppercase;
 										font-weight: 700;
