--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -47,6 +47,7 @@
 .slideInRight{@include slideInRight();}
 .bounce{@include bounce();}
 .slideInRight{@include slideInRight();}
+.slideInLeft{@include slideInLeft();}
 .slideInRightFast{@include slideInRightFast();}
 .flipInX{@include flipInX();}
 
