--- a/src/sass/_crn-general_BStrap_Overrides.scss
+++ b/src/sass/_crn-general_BStrap_Overrides.scss
@@ -1,4 +1,8 @@
 //buttons // ================================================================
+
+.btn-group{
+	overflow:hidden;
+}
 .btn-basic{
 	background: transparent;
 	border-radius: 1px;
@@ -188,6 +192,80 @@
     	cursor: normal;
     	outline:none;
     }
+}
+
+
+.edit-file{
+	width: auto;
+	font-size: 10px;
+	@extend .btn-admin;
+	@extend .admin-blue;
+	position:relative;
+	width: 72px;
+	display: block;
+	overflow: hidden;
+	input{
+
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0;
+		font-size: 20px;
+		cursor: pointer;
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
+}
+
+.add-file{
+	width: auto;
+	font-size: 10px;
+	@extend .btn-admin;
+	position:relative;
+	width: 72px;
+	display: block;
+	overflow: hidden;
+	background:$primaryHover;
+	color:#fff;
+	&:focus, &:hover, &:active{
+		color: #fff;
+		background:$primary;
+	}
+	input{
+
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0;
+		font-size: 20px;
+		cursor: pointer;
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
+}
+.fileupload-btn{
+	@extend .btn-blue;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto 10px;
+    max-width: 200px;
+    padding: 10px;
+    line-height: 16px;
+    font-size: 16px;
+
+	input.dirUpload-btn{
+		position: absolute;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0;
+		font-size: 20px;
+		cursor: pointer;
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
 }
 //form // ================================================================
 
