--- a/src/sass/_crn-navbar.scss
+++ b/src/sass/_crn-navbar.scss
@@ -142,12 +142,7 @@
     }
 }
 .user-menu {
-	width: 75px;
-	height: 75px;
-	position: absolute;
-	top: 0;
-	right: 0;
-	box-shadow: inset 0 0 11px rgba(0, 0, 0, 0.6);
+	position: initial;
     &.btn-null{
 		.btn{
 			background: rgba(0, 0, 0, 0);
@@ -162,6 +157,11 @@
 			text-align: center;
 			margin:0;
 			color:#fff;
+			position: absolute;
+			right: 0;
+			left: auto;
+			width: 75px;
+			top: 0;
 			
 			.caret{
 				display: none;
