--- a/src/sass/_crn-generalwrappers.scss
+++ b/src/sass/_crn-generalwrappers.scss
@@ -147,7 +147,8 @@ body,
 	.tool {
 		display: block;
 		float: left;
-		width:50%;
+		width:auto;
+		margin: 3px 0 0 10px;
 		overflow: hidden;
 		button.btn-admin.warning{
 			padding:6px 0;
