--- a/src/sass/_crn-generalwrappers.scss
+++ b/src/sass/_crn-generalwrappers.scss
@@ -155,16 +155,11 @@ body,
 		}
 		.btn-admin.warning i{
 			&.fa-ban,
-			&.fa-circle,
-			&.fa-circle-o{
-					font-size: 12px;
-					position: relative;
-					top: -1px;
-			}
-			
-			&.fa-ban{
-				top:0;
-				font-size: 14px;
+			&.fa-check-square-o,
+			&.fa-square-o{
+				font-size: 13px;
+				position: relative;
+				top: 0px;
 			}
 		}
 	}
